--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter application.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.1+5
+version: 1.0.1+6
 # flutter Version :: 3.3.8
 environment:
   sdk: '>=2.18.4 <3.0.0'
@@ -38,6 +38,7 @@ dependencies:
   search_map_place_updated: 0.0.4
   permission_handler:
   location: ^4.4.0
+  sentry_flutter: ^7.0.0
 
 dev_dependencies:
   flutter_test:
