--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,6 +19,12 @@ allprojects {
         maven { url 'https://maven.google.com' } // this should be added
         google() // Google's Maven repository
         jcenter()
+        //** add this line
+        configurations.all {
+            resolutionStrategy {
+                force "com.google.android.gms:play-services-location:21.0.1"
+            }
+        }
     }
 }
 
