--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,9 @@ dependencies:
   shared_preferences: ^2.0.11
   enum_to_string: ^2.0.1
   connectivity_plus: ^2.2.0
-  firebase_core: ^2.0.0
-  firebase_messaging: ^14.0.0
-  fluttertoast: 8.0.8
+#  firebase_core: ^2.0.0
+#  firebase_messaging: ^14.0.0
+#  fluttertoast: 8.0.8
   url_launcher: ^6.1.6
   intl: any
   sqflite: ^2.2.2
